# repo_numpy_mem_handler

./: README  meson.build  numpy_mem_handler.pyx  pyproject.toml
src/: numpy_mem_handler.h
tests/: test_numpy_mem_handler.py
