[project]
name = "numpy_mem_handler"
version = "1.0"
description = "Test numpy memory handler"
dependencies = [
  "numpy==2.3.0",
  "Cython==3.1.3",
  "pytest",
  "meson==1.8.3",
  "meson-python>=0.16.0",
  "ninja==1.13.0",
]
requires-python = "==3.13.*"

[build-system]
build-backend = "mesonpy"
requires = ["meson-python>=0.16.0"]